--- a/package.json
+++ b/package.json
@@ -15,12 +15,18 @@
         "react-dom": "^19.1.1"
     },
     "devDependencies": {
+        "@babel/preset-react": "^7.27.1",
         "@prettier/plugin-oxc": "^0.0.4",
         "@rsbuild/core": "^1.4.13",
         "@rsbuild/plugin-react": "^1.3.4",
+        "@rsbuild/plugin-svgr": "^1.2.2",
+        "@stylexjs/postcss-plugin": "^0.15.3",
         "@types/react": "^19.1.9",
         "@types/react-dom": "^19.1.7",
+        "autoprefixer": "^10.4.21",
+        "postcss": "^8.5.6",
         "prettier": "^3.6.2",
-        "typescript": "^5.9.2"
+        "typescript": "^5.9.2",
+        "unplugin-stylex": "^0.5.4"
     }
 }
