--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     },
     "dependencies": {
         "@stylexjs/stylex": "^0.15.3",
+        "@tanstack/react-router": "^1.131.27",
+        "@tanstack/react-router-devtools": "^1.131.27",
         "react": "^19.1.1",
         "react-dom": "^19.1.1"
     },
@@ -20,7 +22,9 @@
         "@rsbuild/core": "^1.4.13",
         "@rsbuild/plugin-react": "^1.3.4",
         "@rsbuild/plugin-svgr": "^1.2.2",
+        "@stylexjs/babel-plugin": "^0.15.3",
         "@stylexjs/postcss-plugin": "^0.15.3",
+        "@tanstack/router-plugin": "^1.131.27",
         "@types/react": "^19.1.9",
         "@types/react-dom": "^19.1.7",
         "autoprefixer": "^10.4.21",
