--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,7 +19,13 @@
         /* type checking */
         "strict": true,
         "noUnusedLocals": true,
-        "noUnusedParameters": true
+        "noUnusedParameters": true,
+
+        /* alias */
+        "baseUrl": "src",
+        "paths": {
+            "~/*": ["*"]
+        }
     },
     "include": ["src"]
 }
