--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
         "@tabler/icons-react": "^3.34.1",
         "@tanstack/react-router": "^1.131.27",
         "@tanstack/react-router-devtools": "^1.131.27",
+        "immer": "^10.1.1",
         "lexical": "^0.34.0",
         "react": "^19.1.1",
         "react-dom": "^19.1.1"
