feat: add Three.js route and components for 3D visualization

--- a/package.json
+++ b/package.json
@@ -24,15 +24,20 @@
         "@lexical/selection": "^0.34.0",
         "@lexical/utils": "^0.34.0",
         "@lexical/yjs": "^0.34.0",
+        "@react-three/drei": "^10.7.6",
+        "@react-three/fiber": "^9.4.0",
+        "@react-three/rapier": "^2.1.0",
         "@stylexjs/stylex": "^0.15.3",
         "@tabler/icons-react": "^3.34.1",
         "@tanstack/react-router": "^1.131.27",
         "@tanstack/react-router-devtools": "^1.131.27",
+        "@types/three": "^0.180.0",
         "@y/websocket-server": "^0.1.1",
         "immer": "^10.1.1",
         "lexical": "^0.34.0",
         "react": "^19.1.1",
         "react-dom": "^19.1.1",
+        "three": "^0.180.0",
         "y-indexeddb": "^9.0.12",
         "y-leveldb": "^0.2.0",
         "y-webrtc": "^10.3.0",
