--- a/package.json
+++ b/package.json
@@ -4,11 +4,11 @@
     "private": true,
     "type": "module",
     "scripts": {
-        "build": "rsbuild build",
-        "dev": "rsbuild dev",
+        "dev": "vite",
+        "build": "vite build",
+        "preview": "vite preview",
         "dev:local": "cross-env NODE_ENV=development concurrently \"pnpm:server:ws\" \"pnpm:server:webrtc\" \"pnpm:dev\"",
         "format": "prettier --write .",
-        "preview": "rsbuild preview",
         "server:ws": "cross-env HOST=localhost PORT=1234 npx y-websocket",
         "server:webrtc": "cross-env HOST=localhost PORT=1235 npx y-webrtc"
     },
@@ -49,20 +49,19 @@
         "@babel/preset-react": "^7.27.1",
         "@babel/preset-typescript": "^7.27.1",
         "@prettier/plugin-oxc": "^0.0.4",
-        "@rsbuild/core": "^1.4.13",
-        "@rsbuild/plugin-react": "^1.3.4",
-        "@rsbuild/plugin-svgr": "^1.2.2",
         "@stylexjs/babel-plugin": "^0.15.3",
         "@stylexjs/postcss-plugin": "^0.15.3",
         "@tanstack/router-plugin": "^1.131.27",
         "@types/react": "^19.1.9",
         "@types/react-dom": "^19.1.7",
+        "@vitejs/plugin-react": "^5.1.1",
         "autoprefixer": "^10.4.21",
         "concurrently": "^9.2.1",
         "cross-env": "^10.0.0",
         "postcss": "^8.5.6",
         "prettier": "^3.6.2",
         "typescript": "^5.9.2",
-        "unplugin-stylex": "^0.5.5"
+        "vite": "^7.2.6",
+        "vite-plugin-svgr": "^4.5.0"
     }
 }
